# crown

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.txt  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CNAME  COPYING.txt  Doxyfile.doxygen  Doxyfile.in  LICENSE  README.md  TODO.txt  index.html  makefile  meson.build
engine/: Android.mk  ArchiveBundle.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Config.h.in  ConsoleServer.cpp  ConsoleServer.h  Crown.h  Device.cpp  Device.h  EventBuffer.cpp  EventBuffer.h  EventQueue.h  FPSSystem.cpp  FileBundle.cpp  FontResource.cpp  FontResource.h  Game.cpp  Glyph.h  Gui.cpp  Gui.h  JSON.cpp  JSON.h  JSONParser.cpp  JSONParser.h  Material.h  Mesh.cpp  Mesh.h  PixelShaderResource.cpp  RenderWorld.cpp  RenderWorld.h  ResourceManager.cpp  ResourceManager.h  SceneGraph.cpp  SceneGraph.h  SceneGraphManager.cpp  SceneGraphManager.h  SceneGraphToPhysicsGraph.h  (+20 more)
engine/audio/: AudioRenderer.h  OggDecoder.h  SoundRenderer.h  SoundSample.h  SoundWorld.h  audio.h  sound_world.h  sound_world_al.cpp  sound_world_sles.cpp
engine/compilers/: BundleCompiler.cpp  BundleCompiler.h  Compiler.cpp  Compiler.h  bundle_compiler.cpp  bundle_compiler.h  compile_options.h  compiler_types.h
engine/core/: Args.cpp  Args.h  Assert.h  Error.h  Functional.h  Log.cpp  Log.h  Macros.h  Profiler.h  Types.h  args.h  assert.h  command_line.h  error.cpp  error.h  functional.h  log.cpp  log.h  macros.h  murmur.cpp  murmur.h  os.h  os_event_queue.h  os_window_android.cpp  os_window_android.h  os_window_linux.cpp  os_window_linux.h  os_window_osx.h  os_window_osx.mm  os_window_windows.cpp  os_window_windows.h  profiler.cpp  profiler.h  stacktrace.h  stacktrace_android.cpp  stacktrace_linux.cpp  stacktrace_osx.cpp  stacktrace_windows.cpp  types.h
engine/gui/: Gui.cpp  Gui.h  GuiImage.h  GuiRect.h  GuiText.h  GuiTriangle.h
engine/input/: Accelerometer.cpp  Accelerometer.h  EventDispatcher.h  InputManager.cpp  InputManager.h  KeyCode.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Touch.h  accelerometer.h  input.cpp  input.h  input_types.h  key_code.h  keyboard.h  mouse.h  touch.h
engine/lua/: AccelerometerBinds.cpp  DeviceBinds.cpp  FloatSettingBinds.cpp  IntSettingBinds.cpp  LuaAccelerometer.cpp  LuaActor.cpp  LuaCamera.cpp  LuaColor4.cpp  LuaController.cpp  LuaDebugLine.cpp  LuaDevice.cpp  LuaEnvironment.cpp  LuaEnvironment.h  LuaFloatSetting.cpp  LuaGui.cpp  LuaIntSetting.cpp  LuaKeyboard.cpp  LuaMat4.cpp  LuaMath.cpp  LuaMatrix4x4.cpp  LuaMatrix4x4Box.cpp  LuaMesh.cpp  LuaMouse.cpp  LuaPhysicsWorld.cpp  LuaQuat.cpp  LuaQuaternion.cpp  LuaQuaternionBox.cpp  LuaRaycast.cpp  LuaResourcePackage.cpp  LuaSound.cpp  LuaSoundWorld.cpp  LuaSprite.cpp  LuaStack.cpp  LuaStack.h  LuaStringSetting.cpp  LuaSystem.cpp  LuaSystem.h  LuaTouch.cpp  LuaUnit.cpp  LuaVec2.cpp  (+52 more)
engine/main/: AndroidManifest.xml  CrownActivity.java  main.cpp  main.h  main_android.cpp  main_linux.cpp  main_osx.mm  main_windows.cpp  win_headers.h
engine/network/: BitMessage.cpp  BitMessage.h
engine/os/: EventBuffer.cpp  EventBuffer.h  NetAddress.h  OS.cpp  OS.h  OsEventBuffer.cpp  OsEventBuffer.h  OsEventQueue.h  OsEvents.h  OsTypes.h  ScopedMutex.h  net_address.h  os.h  os_event_queue.h  os_types.h
engine/physics/: Actor.cpp  Actor.h  Controller.cpp  Controller.h  Joint.cpp  Joint.h  Physics.h  PhysicsCallback.h  PhysicsGraph.cpp  PhysicsGraph.h  PhysicsGraphManager.cpp  PhysicsGraphManager.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h  Raycast.cpp  Raycast.h  Shape.cpp  Shape.h  Trigger.cpp  Trigger.h  actor.cpp  actor.h  controller.cpp  controller.h  joint.cpp  joint.h  physics.h  physics_callback.h  physics_types.h  physics_world.cpp  physics_world.h  raycast.cpp  raycast.h
engine/renderers/: AudioRenderer.h  CommandBuffer.h  ConstantBuffer.h  DebugLine.cpp  DebugLine.h  DebugRenderer.cpp  DebugRenderer.h  Gui.cpp  Gui.h  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OggBufferCallback.h  PixelFormat.cpp  PixelFormat.h  RenderBuffer.h  RenderContext.h  RenderWorld.cpp  RenderWorld.h  RenderWorldTypes.h  Renderer.h  RendererTypes.h  Sprite.cpp  Sprite.h  Texture.h  VertexBuffer.h  VertexFormat.cpp  VertexFormat.h  VertexShader.h  debug_line.cpp  debug_line.h  gui.cpp  gui.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  (+8 more)
engine/resource/: ArchiveBundle.cpp  ArchiveBundle.h  Bundle.h  FileBundle.cpp  FileBundle.h  FontResource.cpp  FontResource.h  GuiResource.cpp  GuiResource.h  LevelResource.cpp  LevelResource.h  LuaResource.cpp  LuaResource.h  MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  PackageResource.cpp  PackageResource.h  PhysicsResource.cpp  PhysicsResource.h  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourcePackage.h  ResourceRegistry.cpp  ResourceRegistry.h  SoundResource.cpp  bundle.h  (+45 more)
lua/: AccelerometerBinds.cpp  CMakeLists.txt  CameraBinds.cpp  KeyboardBinds.cpp  LuaEnvironment.cpp  LuaEnvironment.h  LuaStack.cpp  LuaStack.h  Mat4Binds.cpp  MathBinds.cpp  MouseBinds.cpp  QuatBinds.cpp  Vec2Binds.cpp  Vec2Binds.h  Vec3Binds.cpp
samples/: CMakeLists.txt
src/: Android.mk  ArchiveBundle.cpp  ArchiveBundle.h  ArchiveResourceArchive.cpp  ArchiveResourceArchive.h  Bundle.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Config.h.in  ConsoleServer.cpp  ConsoleServer.h  Crown.h  Data.h  Device.cpp  Device.h  EventBuffer.cpp  EventBuffer.h  EventLoop.cpp  EventLoop.h  FPSSystem.cpp  FPSSystem.h  FileBundle.cpp  FileBundle.h  FileResourceArchive.cpp  FileResourceArchive.h  Filesystem.cpp  Filesystem.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontResource.cpp  FontResource.h  Frame.cpp  Frame.h  Game.cpp  Glyph.h  Image.cpp  (+87 more)
tests/: CMakeLists.txt  allocators.cpp  compressors.cpp  connections.cpp  containers.cpp  hello.lua  messages.cpp  paths.cpp  script.cpp  strings.cpp  tests.json
third/: CMakeLists.txt
tools/: CMakeLists.txt  Config.h.in  config.vala  gresources.c  gresources.xml  makefile  tools.sln
(+3520 files in other folders)
